Add new endpoints to handle resource extraction from CEDAR - refs #25144